@@ -10,6 +10,7 @@ namespace AjTalk.Transactions
     {
         private long time;
         private Machine machine;
+        private List<Transaction> transactions = new List<Transaction>();
 
         [ThreadStatic]
         private static Transaction current;
@@ -33,17 +34,56 @@ namespace AjTalk.Transactions
 
         public void BeginTransaction()
         {
-            current = this.CreateTransaction();
+            if (current != null)
+                throw new InvalidOperationException("A Transaction is active");
+
+            Transaction transaction = this.CreateTransaction();
+            current = transaction;
+
+            lock (this)
+                this.transactions.Add(current);
         }
 
         public void CommitTransaction()
         {
+            lock (this)
+                this.transactions.Remove(current);
+
+            long trtime = Interlocked.Increment(ref time);
+            Interlocked.Increment(ref time);
+            current.Commit(trtime);
+            
             current = null;
         }
 
         public void RollbackTransaction()
         {
+            lock (this)
+                this.transactions.Remove(current);
+
+            long trtime = Interlocked.Increment(ref time);
+            Interlocked.Increment(ref time);
+            current.Rollback(trtime);
+
             current = null;
+        }
+
+        public bool HasTransactions()
+        {
+            return this.transactions.Count != 0;
+        }
+
+        public long MinimalTransactionalTime
+        {
+            get
+            {
+                // TODO review is this method needs locks
+                if (this.transactions.Count == 0)
+                    return this.time+1;
+
+                IEnumerable<long> times = from tr in this.transactions select tr.Start;
+                return times.Min();
+            }
         }
     }
 }
